# 4g-5g-ims-simulators

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  LICENSE  Perplexity New Idea  Perplexity suggestion   README.md  STATE_OF_THE_UNION.md  docker-compose.yml  door.sh  interview_questions.yaml  mme_sim_dissector.lua  tag_rules.json  test_AI_answers
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: 4g-build.yml  5g-build.yml  ims-build.yml
4g-simulator/: .gitignore  CMakeLists.txt  Dockerfile  README.md  STATE_OF_THE_UNION.md  docker-compose.yml  door.sh  sim_events.jsonl  test_automation.py
4g-simulator/.github/workflows/: docker-build.yml
4g-simulator/docker/: prometheus.yml
4g-simulator/docker/grafana/provisioning/datasources/: prometheus.yml
4g-simulator/docs/: BEGINNER.md  DEEPDIVE.md  DEVOPS_GUIDE.md
4g-simulator/k8s/: deployment.yaml  prometheus.yaml  service.yaml
4g-simulator/scenarios/: basic_attach.yaml  bulk_load_test.yaml  mobility_and_handover.yaml
4g-simulator/src/: main.cpp  scenario_runner.cpp
4g-simulator/src/common/: json_event_log.h  message_types.h  metrics.h  nas_eps.cpp  nas_eps.h  prometheus_server.h  s1ap_codec.cpp  s1ap_codec.h  tlv.h
4g-simulator/src/enb/: enb_node.cpp  enb_node.h
4g-simulator/src/hss/: hss_node.cpp  hss_node.h
4g-simulator/src/mme/: mme_node.cpp  mme_node.h  ue_context_store.h
4g-simulator/src/o_ran/: e2_agent.cpp  xapp_main.cpp
4g-simulator/src/pcrf/: pcrf_node.cpp
4g-simulator/src/perf/: perf_scenarios.h
4g-simulator/src/pgw/: pgw_node.cpp
4g-simulator/src/sgw/: sgw_node.h
5g-simulator/: CMakeLists.txt  Dockerfile  README.md  docker-compose.yml
5g-simulator/docker/: entrypoint-amf.sh  entrypoint-gnb.sh  entrypoint-nrf.sh  entrypoint-smf.sh  entrypoint-upf.sh
5g-simulator/docs/: INTERVIEW_QA.md
5g-simulator/k8s/: amf-deployment.yaml  amf-service.yaml  gnb-deployment.yaml  smf-deployment.yaml  upf-deployment.yaml
5g-simulator/src/amf/: amf_main.cpp
5g-simulator/src/common/: chaos_mode.h  nrf_client.h  pcap_writer.cpp  pcap_writer.h  socket_wrapper.h
5g-simulator/src/gnb/: gnb_main.cpp
5g-simulator/src/smf/: smf_main.cpp
5g-simulator/src/upf/: upf_main.cpp
5g-simulator/tests/: test_registration.py
cbrs-domain-proxy/: .gitignore  CMakeLists.txt  README.md
cbrs-domain-proxy/docs/: CBRS_INTERVIEW_GUIDE.md  THREADING_DEBUG_INTERVIEW.md
cbrs-domain-proxy/src/cbsd/: cbsd_agent.cpp
cbrs-domain-proxy/src/common/: logger.h  socket_wrapper.h  wire.h
cbrs-domain-proxy/src/proxy/: cbsd_registry.h  domain_proxy.cpp  spectrum_state.h
cbrs-domain-proxy/src/sas/: sas_stub.cpp
docker/: entrypoint-gnb.sh  entrypoint-udm.sh  entrypoint.sh
docs/: BEGINNER.md  BEGINNER_IMS.md  DEVOPS_GUIDE.md  DOCKER_K8S_GUIDE.md  ENGINEER.md  GUIDE.md  IMS_COMPLETE_GUIDE.md  INTERVIEW_QA.md  LINKEDIN_POST.md  SETUP.md
ims-simulator/: .gitignore  CMakeLists.txt  Dockerfile  README.md  demo_2party_call.sh  demo_full_call.sh  docker-compose.yml  merge_pcap.sh  volte_call_flow.html
ims-simulator/.github/workflows/: build.yml
ims-simulator/docker/: entrypoint-ue.sh
ims-simulator/docs/: ENGINEER_IMS.md  IMS_COMPLETE_GUIDE.md  IMS_IMPL_DEEP_DIVE.md  INTERVIEW_PERF_SCENARIOS.md  VOLTE_IMS_INTERVIEW.md
ims-simulator/k8s/: ims-deployment.yaml
ims-simulator/src/: ims_main.cpp  ims_server_main.cpp  perf_scenarios.cpp  perf_scenarios.h  perf_scenarios_main.cpp  ue_sim.cpp
ims-simulator/src/common/: exceptions.h  logger.h  pcap_writer.cpp  pcap_writer.h  socket_wrapper.h  visual_logger.h
ims-simulator/src/ims/: ims_diagrams.h  ims_hss.cpp  mtas_state.h  pcscf_node.cpp  pcscf_node.h  scscf_node.cpp  sip.h  sip_text.h
interview_questions/: 4g_advanced.yaml  4g_attach.yaml  4g_auth.yaml  4g_bearer.yaml  4g_handover.yaml  4g_interfaces.yaml  4g_nodes.yaml  5g_advanced.yaml  5g_architecture.yaml  5g_auth_security.yaml  5g_oran.yaml  5g_session.yaml  5g_slicing.yaml  cpp_abi.yaml  cpp_allocators.yaml  cpp_cpp20.yaml  cpp_exceptions.yaml  cpp_lambdas.yaml  cpp_memory.yaml  cpp_modern.yaml  cpp_multithreading.yaml  cpp_oop.yaml  cpp_patterns.yaml  cpp_stl.yaml  cpp_system_design.yaml  cpp_templates.yaml  cpp_ub.yaml  golang.yaml  ims_call.yaml  ims_registration.yaml  ims_sip.yaml  ims_supplementary.yaml  index.yaml  kubernetes_devops.yaml  linux_systems.yaml  networking.yaml  python.yaml  telecom_sysdesign.yaml
k8s/: amf-service.yaml  nrf-deployment.yaml  nrf-service.yaml  plmn-configmap.yaml  udm-deployment.yaml  udm-service.yaml
src/: ims_main.cpp  ims_server_main.cpp  main.cpp  ue_sim.cpp
src/common/: aka_lite.h  ids5g.h  logger.h  message.h  nas_eps.cpp  nas_eps.h  pcap_writer.cpp  pcap_writer.h  s1ap_codec.h  socket_wrapper.h  subscriber_profile.h  thread_pool.h  tlv.h  visual_logger.h  wire.h
src/enb/: enb_node.cpp  enb_node.h
src/gnb/: gnb_main.cpp
src/hss/: hss_node.cpp
src/ims/: ims_conferencing.h  ims_hss.cpp  ims_hss.h  pcscf_node.cpp  pcscf_node.h  scscf_node.cpp  scscf_node.h  sip_text.h
src/mme/: mme_node.cpp  mme_node.h  ue_context.h
src/nrf/: nrf_main.cpp
src/pcrf/: pcrf_node.cpp  pcrf_node.h
src/pgw/: pgw_node.cpp  pgw_node.h
src/sgw/: sgw_node.cpp
src/udm/: udm_main.cpp
tools/: pcap_analyzer.py  quiz.py  run_demo.sh  run_scenario.py  viz_server.py  viz_ui.html
